# pymlb_statsapi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Pipfile  README.md  TODO_v1.0.md  pyproject.toml  setup.cfg  setup.py
.github/terraform/: .terraform.lock.hcl  main.tf  tfplan  wiki.tf
.github/workflows/: ci-cd.yml  codeql.yml  publish.yml  test.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  architecture.rst  index.rst  testing.rst
docs/schemas/: awards.rst  broadcast.rst  conference.rst  config.rst  division.rst  draft.rst  game.rst  highlow.rst  homerunderby.rst  job.rst  league.rst  milestones.rst  person.rst  schedule.rst  season.rst  sports.rst  standings.rst  stats.rst  streaks.rst  team.rst
examples/: entity_relationships.py
exports/: endpoint_schema.json  etl_mapping.json
features/: stats-api.feature
features/steps/: stats_api_steps.py
pymlb_statsapi/: __init__.py  __version__.py  cli.py  export.py
pymlb_statsapi/model/: __init__.py  api_docs.py  base.py  factory.py  stats_api.py
pymlb_statsapi/model/api/: __init__.py  awards.py  broadcast.py  conference.py  config.py  division.py  draft.py  game.py  gamepace.py  highlow.py  homerunderby.py  job.py  league.py  milestones.py  person.py  schedule.py  season.py  sports.py  standings.py  stats.py  streaks.py  team.py
pymlb_statsapi/resources/schemas/: endpoint-model.yaml
pymlb_statsapi/resources/schemas/statsapi/: README.md
pymlb_statsapi/resources/schemas/statsapi/stats-api-1-0/: person.json
pymlb_statsapi/resources/schemas/statsapi/stats_api_1_0/: season.json  team.json
pymlb_statsapi/utils/: __init__.py  aws.py  endpoint_config.py  env.py  functions.py  log.py  schema_loader.py  stats_api_object.py
scripts/: capture_all_stubs.py  fix_json_stubs.py  git.sh  validate_setup.py
tests/bdd/: game.feature
tests/bdd/steps/: statsapi_steps.py
tests/bdd/stubs/division/divisions/: divisions_divisionId=200_3267f057aed9.json
tests/bdd/stubs/game/boxscore/: boxscore_game_pk=747175_4240fc08a038.json
tests/bdd/stubs/game/content/: content_game_pk=747175_4240fc08a038.json
tests/bdd/stubs/game/getGameContextMetrics/: getGameContextMetrics_gamePk=747175_timecode=20241027_120000_9832c5a0d561.json
tests/bdd/stubs/game/linescore/: linescore_game_pk=747175_4240fc08a038.json
tests/bdd/stubs/person/freeAgents/: freeAgents_season=2024_2e99ac55e01e.json
tests/bdd/stubs/person/person/: person_personIds=545361_484004149834.json  person_personIds=592450_5b1a998d2ad1.json  person_personIds=608070_9f6a0e3cdb1e.json  person_personIds=660271_0b4b9732e3b9.json  person_personIds=665487_3367d8cd4f14.json
tests/bdd/stubs/schedule/postseasonScheduleSeries/: postseasonScheduleSeries_season=2024_sportId=1_a5c3f17672c0.json
tests/bdd/stubs/schedule/schedule/: schedule_date=2024-10-25_sportId=1_6e063b339560.json  schedule_date=2024-10-26_sportId=1_3150c7552667.json  schedule_date=2024-10-27_gameType=P_sportId=1_688105966ef0.json  schedule_date=2024-10-27_sportId=1_ab2abcb7110d.json  schedule_date=2024-10-27_sportId=1_teamId=147_b45787976c51.json  schedule_endDate=2024-10-22_sportId=1_startDate=2024-10-20_57a3094d70f0.json
tests/bdd/stubs/schedule/tieGames/: tieGames_season=2024_sportId=1_a5c3f17672c0.json
tests/bdd/stubs/season/allSeasons/: allSeasons_sportId=1_62182b57e4d9.json
tests/bdd/stubs/season/seasons/: seasons_seasonId=2021_sportId=1_04c7e66892aa.json  seasons_seasonId=2022_sportId=1_f22ab2da7d22.json  seasons_seasonId=2023_sportId=1_dbb96ebaa2cb.json  seasons_seasonId=2024_sportId=1_b3302db886b2.json  seasons_sportId=1_62182b57e4d9.json
tests/bdd/stubs/team/alumni/: alumni_teamId=147_season=2024_56102b1e8577.json
tests/bdd/stubs/team/coaches/: coaches_teamId=147_season=2024_56102b1e8577.json
tests/bdd/stubs/team/roster/: roster_rosterType=active_teamId=147_season=2024_cdb942e44562.json
tests/bdd/stubs/team/stats/: stats_group=hitting_season=2024_sportId=1_d406fa4cf9b2.json
tests/bdd/stubs/team/teams/: teams_season=2024_sportId=1_a5c3f17672c0.json  teams_teamId=111_8e7b4e52c246.json  teams_teamId=112_2472f66aa468.json  teams_teamId=117_d32c52354123.json  teams_teamId=121_97058df45d59.json  teams_teamId=147_2b2939a35d30.json
tests/unit/pymlb_statsapi/model/: test_statsapi.py
tests/unit/pymlb_statsapi/utils/: test_schema_loader.py
