[build-system]
requires = [
    "uv_build>=0.8.22,<0.9.0",
    "hatch",
    "hatch-vcs",
#    "setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"
]
build-backend = "hatchling.build"

[tool.uv]
# Package discovery - uv auto-discovers packages, but you can be explicit
package = true  # Enable package mode (default for projects with src/ or package directories)

[project]
name = "pymlb-statsapi"
#version = "0.1.4"
dynamic = ["version"]
description = "Python wrapper for MLB Stats API"
readme = "README.md"
authors = [
    { name = "Nikolaus Schuetz", email = "poweredgesports@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    #    "requests>=2.28",
    #    "pandas>=1.5",
    #    "pyyaml>=6.0",
    #    "serde>=0.9"
    "requests>=2.32.5",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "pymlb_statsapi/__version__.py"

[project.urls]
Homepage = "https://github.com/power-edge/pymlb_statsapi"
Repository = "https://github.com/power-edge/pymlb_statsapi"

[dependency-groups]
dev = [
    "hatch>=1.15.1",
    "hatch-vcs",
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]

#[tool.setuptools]
## If you're still using setuptools as the build backend
#packages = ["pymlb_statsapi"]  # Explicit package list

[tool.hatch.build.targets.wheel]
packages = ["pymlb_statsapi"]
exclude = [
    "tests",
    "features",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                   # Verbose output
    "--tb=short",           # Short traceback format
    "--showlocals",         # Show local variables on failures
    "--strict-markers",     # Strict marker checking
    "--strict-config",      # Strict config checking
#    "--cov=pymlb_statsapi", # Coverage for your package
#    "--cov-report=term",    # Basic terminal report
#    "--cov-report=html",    # Generate HTML coverage report
#    "--cov-report=term-missing",  # Show missing coverage
]

#[tool.setuptools.packages.find]
#exclude = ["tests*", "features*"]

#[tool.setuptools.package-data]
#pymlb_statsapi = [
#    "resources/**/*.json",
#    "resources/**/*.yaml",
#    "resources/**/*.yml",
#    "resources/**/*.md"
#]

## Include your resource files
## INCLUDED AUTOMATICALLY BY HATCHLING
#[tool.hatch.build.targets.wheel.include]
#"pymlb_statsapi/resources/**/*.json" = "pymlb_statsapi/resources"
#"pymlb_statsapi/resources/**/*.yaml" = "pymlb_statsapi/resources"
#"pymlb_statsapi/resources/**/*.yml" = "pymlb_statsapi/resources"
#"pymlb_statsapi/resources/**/*.md" = "pymlb_statsapi/resources"


[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]


[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",
    "B008",  # do not perform function calls in argument defaults
]
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"pymlb_statsapi/utils/endpoint_config.py" = ["UP008"]
"features/**/*.py" = ["F811"]  # Ignore redefinition in behave steps
"tests/**/*.py" = ["E501"]  # Ignore line length in tests
"pymlb_statsapi/__version__.py" = ["UP007"]  # Auto-generated by hatch-vcs


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for stricter typing
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "features"]
skips = ["B101"]  # Skip assert_used check in tests
